# Agents

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  agent.requirements.txt  chat-history.json  docker-compose.yml  environment.yml  pyproject.toml  requirements.txt
agent-try/: QA-assist.py  README.md  async-try.py  hello-agent.py  main.py  pyproject.toml  test-helloagent.py  test-planandsolve.py  test-react.py  test-reflect.py  test-weather-search.py
agent-try/api/: app.py
agent-try/models/: Agents.py  LLM.py  Memory.py  PlanAndSolveAgent.py  Planner.py  ReflectionAgent.py
agent-try/models/prompts/: executer_prompt.py  initial_prompt.py  planner_prompt.py  react_prompts.py  refine_prompt.py  reflect_prompt.py
agent-try/service/: qa_service.py
agent-try/tools/: builtin_tools.py  general.py  history.py  registry.py  weather_search.py
demos/: plan_solve_demo.py  react_demo.py  reflection_demo.py
docs/: mini_agent_runtime_optimization_plan.md
frontend/: app.py
src/mini_agent/agents/: Agents.py  BaseAgent.py  Executer.py  LLM.py  PlanAndSolveAgent.py  ReflectionAgent.py  __init__.py
src/mini_agent/agents/prompts/: react_prompts.py
src/mini_agent/api/: app.py  schema.py
src/mini_agent/services/: qa_service.py
src/mini_agent/tools/: __init__.py  base.py  builtin.py  builtin_tools.py  general.py  history.py  registry.py  weather_search.py
src/mini_agent/trace/: __init__.py  models.py  recorder.py
tests/: conftest.py  test_agent_context.py  test_api_app.py  test_api_schema.py  test_base_agent.py  test_history.py  test_plan_solve_steps.py  test_qa_service.py  test_react_parser.py  test_react_runtime.py  test_reflection_steps.py  test_tool_executor.py  test_tool_registry.py  test_tools_builtin.py  test_trace_recorder.py  test_weather_search.py
