[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "colorama==0.4.6",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "fastapi>=0.136.0",
    "google-search-results==2.4.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "openai==2.26.0",
    "packaging>=26.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn>=0.44.0",
]

[tool.uv.workspace]
members = [
    "minimind-master",
    "agent-try",
]
