[project]
name = "mini-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "colorama==0.4.6",
    "deepagents>=0.5.9",
    "distro==1.9.0",
    "exceptiongroup==1.3.1",
    "fastapi>=0.136.0",
    "google-search-results==2.4.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.11",
    "jiter==0.13.0",
    "langchain>=1.2.18",
    "langchain-openai>=1.2.1",
    "openai==2.26.0",
    "packaging>=26.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pytest>=9.0.3",
    "python-dotenv==1.2.2",
    "requests==2.32.5",
    "sniffio==1.3.1",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn>=0.44.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []
